--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookmark-randomiser",
   "version": "0.0.0",
   "scripts": {
-    "watch":"vite build",
+    "watch": "vite build",
     "build": "vite build -w false"
   },
   "dependencies": {
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "classnames": "^2.3.1",
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
