creating bookmark item

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
     "version":"1.0.0",
     "manifest_version":3,
 
+    "permissions":[
+        "favicon"
+    ],
+
     "action":{
         "default_title":"Bookmark Randomiser",
         "default_popup":"build/pages/popup/index.html"
