--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "manifest_version":3,
 
     "permissions":[
-        "favicon"
+        "favicon",
+        "bookmarks"
     ],
 
     "action":{
