--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "classnames": "^2.3.1",
+    "immer": "^9.0.15",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4",
+    "use-immer": "^0.7.0",
     "vite": "^3.0.7",
     "vite-plugin-checker": "^0.4.9"
   }
